k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-rpubkey
  namespace: web-pubkey
spec:
  selector:
    app: frontend-rpubkey
  ports:
  - name: metrics
    port: 443
    targetPort: 443 
    protocol: TCP
  type: LoadBalancer
