k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-rpubkey-config
  namespace: web-pubkey
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    acme.cert-manager.io/http01-ingress-class: "nginx"
spec:
  ingressClassName: nginx
  tls:  
    - secretName: frontend-rpubkey-ingress-tls
      hosts:
        - tarchunk.win
  rules:
      hosts:
        - tarchunk.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-rpubkey
                port:
                  number: 3000
